--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -29,7 +29,7 @@
         <!-- SEND BUTTON -->
         <div class="col-2 p-0">
             <button (click)="sendMessage( textmsg, chatmessages )" class="send-button" mat-mini-fab>
-                <mat-icon style="vertical-align: unset;">send</mat-icon>
+                <span class="mdi mdi-send xl"></span>
             </button>
         </div>
     </div>
