--- a/src/app/pages/admin/home/home.component.html
+++ b/src/app/pages/admin/home/home.component.html
@@ -14,7 +14,8 @@
 
           <div>
             <p>
-              <mat-icon style="vertical-align: sub;">headset_mic</mat-icon> Atender Turnos
+              <span class="mdi mdi-headset lg mr-2"></span>
+              Atender Turnos
             </p>
             <p>
               Para atender turnos sólo debe ingresar a su cuenta y luego ir al menú de Asistente y tomar un escritorio.
@@ -24,7 +25,8 @@
           <hr>
           <div>
             <p>
-              <mat-icon style="vertical-align: sub;">bookmark_border</mat-icon> Generar Turnos
+              <span class="mdi mdi-bookmark-plus-outline lg mr-2"></span> 
+              Generar Turnos
             </p>
             <p>
               Para que sus clientes puedan crear turnos de su comercio o empresa, debe ofrecerles la
@@ -38,7 +40,9 @@
           </div>
           <hr>
           <p>
-            <mat-icon style="vertical-align: sub;">language</mat-icon> Acceso directo a crear turnos
+            <span class="mdi mdi-shield-link-variant lg mr-2"></span> 
+ 
+            Acceso directo a crear turnos
           </p>
           <p>
             La dirección web de acceso directo a el panel de turnos de su comercio es:
@@ -292,9 +296,8 @@
         <p>
           Usted puede crear asistentes y asignarles habilidades, o puede omitir crear asistentes, pero en ese caso
           debe al menos asignarse a su propio usuario las habilidades que quiere atender. Para eso
-          edite su usuario haciendo click en editar con el icono
-          <mat-icon style="font-size: medium;">edit</mat-icon> y luego selecciones las habilidades en el cuadro
-          SKILLS.
+          edite su usuario haciendo click en lapiz de editar y luego seleccione las habilidades en el cuadro
+          Skills.
         </p>
 
       </div>
