--- a/src/app/pages/admin/skills/skills.component.html
+++ b/src/app/pages/admin/skills/skills.component.html
@@ -19,8 +19,7 @@
                     <td> {{skill?.cd_skill}} </td>
                     <td> {{skill?.tx_skill}} </td>
                     <td style="text-align: right;">
-                        <mat-icon class="ml-2 list-crud-delete" (click)="deleteSkill(skill._id)">delete
-                        </mat-icon>
+                        <span class="mdi mdi-delete ml-2 list-crud-delete" (click)="deleteSkill(skill._id)"></span>
                     </td>
                 </tr>
             </table>
