--- a/src/app/pages/how-works/how-works.component.html
+++ b/src/app/pages/how-works/how-works.component.html
@@ -27,7 +27,7 @@
                         accediendo al menú de
                         su empresa como en una web normal.
                     </p>
-                    <p> 
+                    <p>
                         <b>
                             En esta web utilizamos HTTPS que es un protocolo seguro de cifrado de datos (SSL) en la
                             transferencia de datos.
@@ -40,17 +40,17 @@
                         </b>
                     </p>
                     <hr>
-                    
+
                     <div class="row" style="text-align: center;">
                         <div class="col">
                             <span class="footer-icon-menu" routerLink="/home">
-                                <mat-icon>home</mat-icon>
+                                <span class="mdi mdi-home xl"></span>
                                 <div>Home</div>
                             </span>
                         </div>
                         <div class="col">
                             <div class="footer-icon-menu" (click)="stepperGoNext(stepper)">
-                                <mat-icon>navigate_next</mat-icon>
+                                <span class="mdi mdi-chevron-right xl"></span>
                                 <div>Siguiente</div>
                             </div>
                         </div>
@@ -75,9 +75,11 @@
                     </p>
                     <p>
                         Luego debe ingresar desde "Login". Una vez logueado usted ya dispone de un usuario con rol de
-                        administrador. Este perfil le va a permitir crear todo lo necesario a través de un simple asistente, 
-                        para que pueda empezar a atender los turnos que generan sus clientes. 
-                        Para atender turnos sólo debe ir al menu de Asistentes y tomar un escritorio que se encuentre disponible. 
+                        administrador. Este perfil le va a permitir crear todo lo necesario a través de un simple
+                        asistente,
+                        para que pueda empezar a atender los turnos que generan sus clientes.
+                        Para atender turnos sólo debe ir al menu de Asistentes y tomar un escritorio que se encuentre
+                        disponible.
                         Cada asistente puede iniciar y cerrar una sesión de escritorio.
                     </p>
 
@@ -101,19 +103,19 @@
                     <div class="row" style="text-align: center;">
                         <div class="col">
                             <div class="footer-icon-menu" (click)="stepperGoBack(stepper)">
-                                <mat-icon>navigate_before</mat-icon>
+                                <span class="mdi mdi-chevron-left xl"></span>
                                 <div>Anterior</div>
                             </div>
                         </div>
                         <div class="col">
                             <span class="footer-icon-menu" routerLink="/home">
-                                <mat-icon>home</mat-icon>
+                                <span class="mdi mdi-home xl"></span>
                                 <div>Home</div>
                             </span>
                         </div>
                         <div class="col">
                             <div class="footer-icon-menu" (click)="stepperGoNext(stepper)">
-                                <mat-icon>navigate_next</mat-icon>
+                                <span class="mdi mdi-chevron-right xl"></span>
                                 <div>Siguiente</div>
                             </div>
                         </div>
@@ -153,19 +155,19 @@
                     <div class="row" style="text-align: center;">
                         <div class="col">
                             <div class="footer-icon-menu" (click)="stepperGoBack(stepper)">
-                                <mat-icon>navigate_before</mat-icon>
+                                <span class="mdi mdi-chevron-left xl"></span>
                                 <div>Anterior</div>
                             </div>
                         </div>
                         <div class="col">
                             <span class="footer-icon-menu" routerLink="/home">
-                                <mat-icon>home</mat-icon>
+                                <span class="mdi mdi-home xl"></span>
                                 <div>Home</div>
                             </span>
                         </div>
                         <div class="col">
                             <div class="footer-icon-menu" (click)="stepperGoNext(stepper)">
-                                <mat-icon>navigate_next</mat-icon>
+                                <span class="mdi mdi-chevron-right xl"></span>
                                 <div>Siguiente</div>
                             </div>
                         </div>
@@ -173,7 +175,7 @@
 
                 </div>
             </div>
-            
+
         </mat-step>
 
         <!-- Porqué Step -->
@@ -183,17 +185,20 @@
 
                     <h5>Porqué <span class="saturno-typo">SATURNO</span>?</h5>
                     <p>
-                        Somos programadores y nos dedicamos a esta profesión con pasión, nos mantenemos constantemente 
+                        Somos programadores y nos dedicamos a esta profesión con pasión, nos mantenemos constantemente
                         actualizados con las últimas tecnologías disponibles para convertirlas en
                         aplicaciones ágiles y modernas que aporten valor y sean de gran utilidad.
                     </p>
                     <p>
-                        Es un proyecto que a penas comienza. Es libre y sobretodo es gratis. No cobramos ni cobraremos por este servicio, 
-                        ni a usted ni a sus clientes. 
+                        Es un proyecto que a penas comienza. Es libre y sobretodo es gratis. No cobramos ni cobraremos
+                        por este servicio,
+                        ni a usted ni a sus clientes.
                     </p>
                     <p>
-                        Estaremos con la mejor predisposición a escuchar propuestas de mejora para su negocio de modo que además, nos permita 
-                        implementar un proceso de mejoras constantes en nuestras aplicaciones para que puedan adaptarse mejor a sus necesidades, 
+                        Estaremos con la mejor predisposición a escuchar propuestas de mejora para su negocio de modo
+                        que además, nos permita
+                        implementar un proceso de mejoras constantes en nuestras aplicaciones para que puedan adaptarse
+                        mejor a sus necesidades,
                         de su negocio y sus clientes.
                     </p>
                     <hr>
@@ -202,19 +207,20 @@
 
                         <div class="col">
                             <div class="footer-icon-menu" (click)="stepperGoBack(stepper)">
-                                <mat-icon>navigate_before</mat-icon>
+                                <span class="mdi mdi-chevron-left xl"></span>
                                 <div>Anterior</div>
                             </div>
                         </div>
                         <div class="col">
                             <span class="footer-icon-menu" routerLink="/home">
-                                <mat-icon>home</mat-icon>
+                                <span class="mdi mdi-home xl"></span>
                                 <div>Home</div>
                             </span>
                         </div>
                         <div class="col">
                             <span class="footer-icon-menu" routerLink="/register">
-                                <mat-icon>account_box</mat-icon>
+                                <div class="mdi mdi-account-plus xl"></div>
+                                
                                 <div>Registrarme</div>
                             </span>
                         </div>
