--- a/src/app/pages/public/search/search.component.html
+++ b/src/app/pages/public/search/search.component.html
@@ -4,15 +4,13 @@
         
         <h2>Ingrese la empresa</h2>
                
-        
-        <mat-icon class="mat-icon-search-company">apartment</mat-icon>
-        <mat-icon class="mat-icon-search-company">house</mat-icon>
-        <mat-icon class="mat-icon-search-company">storefront</mat-icon>
-        <mat-icon class="mat-icon-search-company">deck</mat-icon>
-        <mat-icon class="mat-icon-search-company">location_city</mat-icon>
-        <mat-icon class="mat-icon-search-company">account_balance</mat-icon>
+        <span class="mdi mdi-domain icon-search-company"></span>
+        <span class="mdi mdi-store icon-search-company"></span>
+        <span class="mdi mdi-hospital-building icon-search-company"></span>
+        <span class="mdi mdi-storefront-outline icon-search-company"></span>
+        <span class="mdi mdi-office-building icon-search-company"></span>
         <hr>
-        <p class="lead">La empresa debe estar registrada, por ejemplo "Pizza Tomato".</p>
+        <p class="lead">La empresa debe estar registrada, por ejemplo "Pizza Taz".</p>
 
         <div class="my-2">
 
