--- a/src/app/pages/public/tickets/tickets.component.html
+++ b/src/app/pages/public/tickets/tickets.component.html
@@ -32,12 +32,12 @@
         <div class="row rounded border border-success mb-3">
           <div class="col bg-success text-white p-2">
             <div>
-              <mat-icon class="m-2 mr-3" style="font-size: xx-large;">accessible</mat-icon>
-              <mat-icon class="m-2 mr-3" style="font-size: xx-large;">pregnant_woman</mat-icon>
+              <span class="mdi mdi-human-wheelchair m-2" style="font-size: xx-large;"></span>
+              <span class="mdi mdi-human-pregnant m-2" style="font-size: xx-large;"></span>
             </div>
             <div>
-              <mat-icon class="m-2 mr-3" style="font-size: xx-large;">child_friendly</mat-icon>
-              <mat-icon class="m-2 mr-3" style="font-size: xx-large;">elderly</mat-icon>
+              <span class="mdi mdi-baby-carriage m-2" style="font-size: xx-large;"></span>
+              <span class="mdi mdi-human-cane m-2" style="font-size: xx-large;"></span>
             </div>
           </div>
           <div class="col m-3">
@@ -60,13 +60,13 @@
   <div class="row">
     <div class="col">
       <span class="footer-icon-menu" routerLink="/public/search">
-        <mat-icon>search</mat-icon>
+        <span class="mdi mdi-magnify xl"></span>
         <div >Volver al buscador</div>
       </span>
     </div>
     <div class="col">
       <span class="footer-icon-menu" routerLink="/public/screen">
-        <mat-icon>list_alt</mat-icon>
+        <span class="mdi mdi-monitor-dashboard xl"></span>
         <div >Ver la pantalla</div>
       </span>
     </div>
