--- a/src/app/pages/assistant/desktop/desktop.component.html
+++ b/src/app/pages/assistant/desktop/desktop.component.html
@@ -15,7 +15,7 @@
           ESCRITORIO {{ userService.desktop?.cd_desktop }}
         </span>
         <span *ngIf="comingClient">
-          <mat-icon style="float: right; color: blueviolet; font-size: x-large;">directions_walk</mat-icon>
+          <span class="mdi mdi-walk" style="float: right; color: green; font-size: x-large;"></span>
         </span>
       </div>
       <div class="card-body">
@@ -108,9 +108,9 @@
             <tr *ngFor="let waiting of pendingTicketsBySkill">
               <td style="padding: 0; vertical-align: middle; font-size: 16px;">
                 <!-- skill assigned to assistant -->
-                <span *ngIf="waiting.assigned" style="color: greenyellow">
-                  <mat-icon>check</mat-icon>
-                </span>
+                
+                  <span *ngIf="waiting.assigned" class="mdi mdi-check" style="color: greenyellow"></span>
+               
                 <!-- skill is NOT assigned to assistant, input radio can reassign ticket -->
                 <span *ngIf="!waiting.assigned && !waitForClient && ticketsService.myTicket">
                   <mat-radio-button [value]="waiting.id" style="position: relative;
@@ -148,7 +148,7 @@
       <!-- priority slide -->
       <mat-slide-toggle [(ngModel)]="blPriority" class="mx-2 my-1"
         [disabled]="waitForClient || !ticketsService.myTicket || skillSelected === ''">
-        <mat-icon class="accessible-icon">accessible</mat-icon>
+        <span class="mdi mdi-human-wheelchair xl mx-1"></span>
       </mat-slide-toggle>
     </div>
 
@@ -158,7 +158,7 @@
         [disabled]="waitForClient || !ticketsService.myTicket || skillSelected === ''" (click)="reassignTicket()">
         <!-- reassign ticket -->
         <div>
-          <mat-icon>rule</mat-icon>
+          <div class="mdi mdi-list-status xl"></div>
         </div>
         <div class="button-inner">
           Asignar
@@ -171,7 +171,8 @@
       <button class="btn btn-success button" (click)="takeTicket()" [disabled]="waitForClient"
         [ngClass]="{'button-disabled': waitForClient}">
         <div>
-          <mat-icon>check</mat-icon>
+          <div class="mdi mdi-chevron-right xl"></div>
+
         </div>
         <div class="button-inner">
           Siguiente
@@ -185,7 +186,7 @@
         [disabled]="waitForClient || !ticketsService.myTicket"
         [ngClass]="{'button-disabled': waitForClient || !ticketsService.myTicket}">
         <div>
-          <mat-icon>replay</mat-icon>
+          <div class="mdi mdi-replay xl"></div>
         </div>
         <div class="button-inner">
           Soltar
@@ -199,7 +200,7 @@
         [disabled]="waitForClient || !ticketsService.myTicket"
         [ngClass]="{'button-disabled': waitForClient || !ticketsService.myTicket}">
         <div>
-          <mat-icon>close</mat-icon>
+          <div class="mdi mdi-close xl"></div>
         </div>
         <div class="button-inner">
           Finalizar
@@ -211,7 +212,7 @@
       <button class="btn btn-danger button" (click)="releaseDesktop()" [disabled]="waitForClient"
         [ngClass]="{'button-disabled': waitForClient}">
         <div>
-          <mat-icon>power_settings_new</mat-icon>
+          <div class="mdi mdi-power xl"></div>
         </div>
         <div class="button-inner">
           Salir
