--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -50,7 +50,7 @@
     <div class="row">
       <div class="col">
         <span class="footer-icon-menu" routerLink="/home">
-          <mat-icon>home</mat-icon>
+            <span class="mdi mdi-home xl"></span>
           <div>Inicio</div>
         </span>
       </div>
