--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -74,25 +74,25 @@
   <div class="row">
     <div *ngIf="ticketsService.companyData" class="col">
       <span class="footer-icon-menu" routerLink="/public/screen">
-        <mat-icon>list_alt</mat-icon>
+       <span class="mdi mdi-monitor-dashboard xl"></span>
         <div>Ver Pantalla</div>
       </span>
     </div>
     <div *ngIf="!ticketsService.companyData" class="col">
       <span class="footer-icon-menu" routerLink="/public/screen">
-        <mat-icon>search</mat-icon>
+        <span class="mdi mdi-magnify xl"></span>
         <div>Buscar Empresa</div>
       </span>
     </div>
     <div class="col">
       <span class="footer-icon-menu" routerLink="/login">
-        <mat-icon>login</mat-icon>
+        <span class="mdi mdi-login xl"></span>
         <div>Login</div>
       </span>
     </div>
     <div class="col">
       <span class="footer-icon-menu" routerLink="/contact">
-        <mat-icon>comment</mat-icon>
+        <span class="mdi mdi-file-document-edit-outline xl"></span>
         <div>Contacto</div>
       </span>
     </div>
