--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -78,7 +78,7 @@
     <div class="row">
         <div class="col">
             <span class="footer-icon-menu" routerLink="/home">
-                <mat-icon>home</mat-icon>
+                <span class="mdi mdi-home xl"></span>
                 <div>Inicio</div>
             </span>
         </div>
