--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -82,7 +82,7 @@
     <div class="row">
         <div class="col">
             <span class="footer-icon-menu" routerLink="/home">
-                <mat-icon>home</mat-icon>
+                <span class="mdi mdi-home xl"></span>
                 <div>Inicio</div>
             </span>
         </div>
